--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.mapdb', name: 'mapdb', version: '3.0.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
